getAll trips + fix sql scripts + add errors on trip and boat
